Big internal structure change. Most WS-Attacker objects are now Beans for easier GUI integration